# ClGaussianPyramid

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  FindOpenCL.cmake  FindOpenCV.cmake  README  README.txt  TODO  do  pipeline.xml
GSPModule/: CMakeLists.txt  GaussPyramid.cpp  GaussPyramid.h  IPLToRGB.cpp  IPLToRGB.h  PyramidLayoutUtils.h  PyramidLevelSelector.cpp  PyramidLevelSelector.h  README  RGBToIPL.cpp  RGBToIPL.h  TODO  bgrtoipl.c  cltorgb.c  demo-pipeline-two.xml  demo-pipeline.xml  framework.h  gausspyramid.c  globalvars.c  ipltobgr.c  ipltocl.c  ipltorgb.c  layoututils.h  levelselector.c  notes  pipeline-two.xml  pipeline.xml  rgbtoipl.c
JavaImplementation/: CMakeLists.txt  build.xml
JavaImplementation/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
JavaImplementation/src/: CMakeLists.txt
JavaImplementation/src/com/heeere/opencl/: JOCLConvolveOp.java  Pyramid.java  PyramidImpl.java  PyramidProcessor.java  TestPyramidOnLena.java
JavaImplementation/src/com/heeere/opencl/demo/: FileUtils.java  ImageStackViewer.java  JOCLSimpleConvolution.java
JavaWrapper/: README.txt  config.jnaerator
cl/: CMakeLists.txt
clcheck/: CMakeLists.txt  clcheck.c
clgp/: CMakeLists.txt  Convolution.cpp  Convolution.h  Simple.cl  clgp.c  clgp.h  convolution.c  convolution.cl  convolution.h  downsampledgauss5x5.c  downsampledgauss5x5.cl  downsampledgauss5x5.h  downscale.c  downscale.cl  downscale.h  downscaledconvolution.c  downscaledconvolution.cl  downscaledconvolution.h  downscaledgauss5x5.c  downscaledgauss5x5.cl  downscaledgauss5x5.h  error.c  error.h  gauss9x9.c  gauss9x9.cl  gauss9x9.h  optionallyDownscaledConvolution.cl  optionallydownscaledconvolution.c  optionallydownscaledconvolution.h  utils.c  utils.h
clgp/demos/: CMakeLists.txt  gaussianpyramid.c
clgp/include/: CMakeLists.txt
clgp/include/clgp/: clgp.h
clgp/libclgp/: CMakeLists.txt  clgp.c  downsampledgauss5x5.c  downsampledgauss5x5.cl  downsampledgauss5x5.h  downscaledgauss5x5.c  downscaledgauss5x5.cl  downscaledgauss5x5.h  gauss9x9.c  gauss9x9.cl  gauss9x9.h  utils.c
examples/: CMakeLists.txt  clpyramid.c
java/: CLGP.java  CMakeLists.txt  GaussianPyramidJavaDemo.java  jclgp.c
javacl/: pom.xml
javacl/pipelines/: pipeline-show-multiple-levels.xml  pipeline-show-ui-level.xml  readme.txt
javacl/src/main/java/com/heeere/gp/javacl/: GaussianPyramid.java  GaussianPyramidProcessor.java  LevelSelector.java
javacl/src/main/opencl/com/heeere/gp/javacl/: Downsampledgauss5x5.cl  Downscaledgauss5x5.cl  Gauss9x9.cl
kernels/: SimpleConvolution.cl  convolution.cl  downsampledgauss5x5.cl  downscale.cl  downscaledconvolution.cl  downscaledgauss5x5.cl  gauss9x9.cl  optionallyDownscaledConvolution.cl
lib/: README.txt
src/: CMakeLists.txt  CvViewer.cpp  CvViewer.h  ImageSource.cpp  ImageSource.h  ImageSource.hpp  framework.h
test/: CMakeLists.txt  test-box.cpp  test-convolution.c  test-downscale.c  test-pyramid.c
tests/: CMakeLists.txt  test-impulse.c  test-pyramid.c  test-pyramidhalfoctave.c  test-pyramidsqrt2.c
tools/: CMakeLists.txt  cl2c.c  clc.c
