PROJECT(ClGaussianPyramid C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE RelWithDebInfo 
      CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
IF(NOT CMAKE_C_FLAGS)
  SET(CMAKE_C_FLAGS "-std=c99 -D_POSIX_C_SOURCE=200809L -Wall -Wextra -Wshadow"
      CACHE STRING
      "Flags used by the compiler during all build types."
      FORCE)
ENDIF(NOT CMAKE_C_FLAGS)
SET(CMAKE_C_FLAGS_DEBUG "-g -O0 -DDEBUG"
    CACHE STRING 
    "Flags used by the compiler during debug builds." 
    FORCE)

OPTION(BUILD_JAVAIMPLEMENTATION "Build the JavaImplementation jar" FALSE)
OPTION(BUILD_GSPMODULE "Build the GSP module" FALSE)
OPTION(BUILD_TESTS "Build the tests" FALSE)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
FIND_PACKAGE(ImageMagick COMPONENTS MagickWand REQUIRED)
FIND_PACKAGE(OpenCL REQUIRED)

ADD_SUBDIRECTORY(tools)

ADD_SUBDIRECTORY(clgp)
IF(BUILD_JAVAIMPLEMENTATION)
  ADD_SUBDIRECTORY(JavaImplementation)
ENDIF(BUILD_JAVAIMPLEMENTATION)
IF(BUILD_GSPMODULE AND ${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  FIND_PACKAGE(OpenCV REQUIRED)
  ADD_SUBDIRECTORY(GSPModule)
ENDIF(BUILD_GSPMODULE AND ${CMAKE_SYSTEM_NAME} STREQUAL "Linux")

ADD_SUBDIRECTORY(examples)

IF(BUILD_TESTS)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTS)

