CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

FIND_PACKAGE(Java REQUIRED)
INCLUDE(UseJava)

FIND_PROGRAM(UNZIP_EXECUTABLE unzip)
IF(NOT UNZIP_EXECUTABLE)
  MESSAGE(FATAL_ERROR "unzip NOT found")
ENDIF(NOT UNZIP_EXECUTABLE)
MESSAGE(STATUS "Downloading JOCL archive")
FILE(DOWNLOAD 
    http://www.jocl.org/downloads/JOCL-0.1.7-bin.zip 
    ${CMAKE_CURRENT_BINARY_DIR}/downloads/JOCL-0.1.7-bin.zip)
MESSAGE(STATUS "Extracting JOCL jar")
EXECUTE_PROCESS(
    COMMAND ${UNZIP_EXECUTABLE} -j -o ${CMAKE_CURRENT_BINARY_DIR}/downloads/JOCL-0.1.7-bin.zip JOCL-0.1.7-bin/JOCL-0.1.7.jar
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    OUTPUT_QUIET)
     
set(CMAKE_JAVA_INCLUDE_PATH ${CMAKE_CURRENT_BINARY_DIR}/JOCL-0.1.7.jar)
FILE(GLOB_RECURSE JavaImplementation_SRCS src/*.java)
ADD_JAR(JavaImplementation ${JavaImplementation_SRCS})

